--- a/src/ui/requestbuilder.ui
+++ b/src/ui/requestbuilder.ui
@@ -200,6 +200,26 @@
            </property>
           </widget>
          </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QToolButton" name="toolButton_polyglot">
+           <property name="text">
+            <string>PolyGlot</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
