--- a/src/ui/outputmapping.ui
+++ b/src/ui/outputmapping.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Output Mapping</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>true</bool>
