chore: Refactor UI components and fix URL source callbacks

--- a/src/ui/inputwidget.ui
+++ b/src/ui/inputwidget.ui
@@ -161,6 +161,9 @@
          </item>
          <item>
           <widget class="QComboBox" name="comboBox_aggTarget">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
            <property name="currentText">
             <string>to Empty</string>
            </property>
