--- a/src/ui/inputwidget.ui
+++ b/src/ui/inputwidget.ui
@@ -120,7 +120,10 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="widget_3" native="true">
+       <widget class="QWidget" name="widget_inputValueOptions" native="true">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
           <widget class="QCheckBox" name="obsTextSourceEnabledCheckBox">
@@ -161,9 +164,6 @@
          </item>
          <item>
           <widget class="QComboBox" name="comboBox_aggTarget">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
            <property name="currentText">
             <string>to Empty</string>
            </property>
